# web-project-microshop

./: README.md  crud.py  item_views.py  main.py  pyproject.toml  queries.sql
alembic/versions/: 2026_03_03_2213-21a5218c3eec_create_products_table.py  2026_03_04_1021-149f57819e54_create_users_table.py  2026_03_04_1212-4ee99208d503_create_posts_table.py  2026_03_07_1949-2541d57661fa_init.py  2026_03_16_2207-00eafc671f1b_create_orders_table.py  2026_03_17_2141-03a1365c8345_create_order_product_association_table.py  2026_03_25_1306-23400749e4fa_add_count_column_to_order_product_.py  2026_03_26_1142-99417b0af549_add_unit_price_column_to_order_product_.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  user.py
microshop/: main.py
users/: crud.py  views.py
